// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error when accessing property on undefined 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when accessing property on undefined 2`] = `
Array [
  GetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 18,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "obj": undefined,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when assigning to builtin 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when assigning to builtin 2`] = `
Array [
  ConstAssignment {
    "location": SourceLocation {
      "end": Position {
        "column": 11,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "name": "map",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when assigning to builtin 3`] = `
Object {
  "status": "error",
}
`;

exports[`Error when assigning to builtin 4`] = `
Array [
  ConstAssignment {
    "location": SourceLocation {
      "end": Position {
        "column": 17,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "name": "undefined",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when assigning to property on undefined 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when assigning to property on undefined 2`] = `
Array [
  SetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 24,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "obj": undefined,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when assigning to property on variable with value undefined 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when assigning to property on variable with value undefined 2`] = `
Array [
  SetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 16,
        "line": 3,
      },
      "start": Position {
        "column": 4,
        "line": 3,
      },
    },
    "obj": undefined,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when deeply accessing property on undefined 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when deeply accessing property on undefined 2`] = `
Array [
  GetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 18,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "obj": undefined,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Error when deeply assigning to property on variable with value undefined 1`] = `
Object {
  "status": "error",
}
`;

exports[`Error when deeply assigning to property on variable with value undefined 2`] = `
Array [
  GetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 10,
        "line": 3,
      },
      "start": Position {
        "column": 4,
        "line": 3,
      },
    },
    "obj": undefined,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`In case a function ever returns null, should throw an error as well 1`] = `
Object {
  "status": "error",
}
`;

exports[`In case a function ever returns null, should throw an error as well 2`] = `
Array [
  GetPropertyError {
    "location": SourceLocation {
      "end": Position {
        "column": 15,
        "line": 3,
      },
      "start": Position {
        "column": 4,
        "line": 3,
      },
    },
    "obj": null,
    "prop": "prop",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;

exports[`Undefined variable error is thrown 1`] = `
Object {
  "status": "error",
}
`;

exports[`Undefined variable error is thrown 2`] = `
Array [
  UndefinedVariable {
    "location": SourceLocation {
      "end": Position {
        "column": 16,
        "line": 2,
      },
      "start": Position {
        "column": 4,
        "line": 2,
      },
    },
    "name": "im_undefined",
    "severity": "Error",
    "type": "Runtime",
  },
]
`;
